--- a/aspnet-get-started/Views/Home/Index.cshtml
+++ b/aspnet-get-started/Views/Home/Index.cshtml
@@ -1,158 +1,30 @@
-﻿<!DOCTYPE html>
-<html>
-	<head>
-		<meta charset="UTF-8">
-		<title>Centro Docente</title>
-		
-		<link rel="stylesheet" href="./css/estilo.css">
-		
-		<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
-		
-		<script src="https://code.jquery.com/jquery-3.5.1.min.js" integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
-		<script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous"></script>
-		<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js" integrity="sha384-B4gt1jrGC7Jh4AgTPSdUtOBvfO8shuf57BaghqFfPlYxofvL8/KUEfYiJOMMV+rV" crossorigin="anonymous"></script>
-		
-		<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.3/font/bootstrap-icons.css">
-		
-	</head>
-		<header class="container-fluid bg-primary d-flex justify-content-end p-1">
-		<div class="d-flex justify-content-end">
-			<a href="#"><p class="text-light mb-0 pl-1 pr-2 fs-1">VA</p></a>
-			<a href="#"><p class="text-light mb-0 pl-2 pr-2 fs-1 border-left border-right font-weight-bold">ES</p></a>
-			<a href="#"><p class="text-light mb-0 pl-2 pr-1 fs-1 pr-3">EN</p></a>
-		</div>
-		</header>
-		
-		<nav class="navbar navbar-expand-lg navbar-light bg-light p-3">
-		  <a class="navbar-brand" href="#">
-		  	<span id="span-Centro-Docente" class="text-dark fs-5">Centro Docente</span>
-		  </a>
-		  
-		  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-		    <span class="navbar-toggler-icon"></span>
-		  </button>
-		
-		  <div class="collapse navbar-collapse" id="navbarSupportedContent">
-		    <ul class="navbar-nav mr-auto">
-		    
-		      <!– ITEM DE LA NAVBAR: INICIO –>
-		      <li class="nav-item active">
-		        <a class="nav-link seleccionado" href="inicio.html">Inicio</a>
-		      </li>
-		      
-		      <!– ITEM DE LA NAVBAR: AULAS –>
-		      <li class="nav-item">
-		        <a class="nav-link" href="aulas.html">Aulas</a>
-		      </li>
-		      
-		      <!– ITEM DE LA NAVBAR: ASIGNATURAS (DROPDOWN) –>
-		      <li class="nav-item dropdown"><a
-				class="nav-link dropdown-toggle" href="#" id="navbarDropdown"
-				role="button" data-toggle="dropdown" aria-haspopup="true"
-				aria-expanded="false"> Asignaturas </a>
-				<div class="dropdown-menu" aria-labelledby="navbarDropdown">
-					<a class="dropdown-item" href="asig_ESO.html">ESO</a>
-					<div class="dropdown-divider"></div>
-					<a class="dropdown-item" href="asig_1BACH.html">1º Bachillerato</a> <a
-						class="dropdown-item" href="asig_2BACH.html">2º Bachillerato</a>
-				</div></li>
-		      
-		      <!– ITEM DE LA NAVBAR: EQUIPO DIRECTIVO –>
-		      <li class="nav-item">
-		        <a class="nav-link" href="equipo-directivo.html">Equipo directivo</a>
-		      </li>
-		      
-		      <!– ITEM DE LA NAVBAR: NORMATIVA –>
-		      <li class="nav-item">
-		        <a class="nav-link" href="normativa.html">Normativa</a>
-		      </li>
-		      
-		      <!– ITEM DE LA NAVBAR: MAPAS –>
-		      <li class="nav-item">
-		        <a class="nav-link" href="mapas.html">Mapa</a>
-		      </li>
-		      
-		      <!– ITEM DE LA NAVBAR: CONTACTO–>
-		      <li class="nav-item">
-		        <a class="nav-link" href="contacto.html">Contacto</a>
-		      </li>
-		      
-		       <!– ITEM DE LA NAVBAR: EXPEDIENTE REST–>
-		      <li class="nav-item">
-		        <a class="nav-link border-left" href="expediente-rest.html">Expediente REST</a>
-		      </li>
-		    </ul>
-		  	<a href="inicio_sesion.html" class="text-white"><button class="btn btn-primary btn-primary-outline-success my-2 my-sm-0" type="submit">Iniciar sesión</button></a>
-		  </div>
-		</nav>
-		
-		<!– CARRUSEL DE IMAGENES –>
-		
-		<div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
-		  <ol class="carousel-indicators">
-		    <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
-		    <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
-		    <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
-		  </ol>
-		  <div class="carousel-inner">
-		    <div class="carousel-item active">
-		      <img class="d-block w-100" src="img/carrusel1.jpg" alt="Imagen de un aula con alumnos y el profesor">
-		    </div>
-		    
-		    <div class="carousel-item">
-		      <img class="d-block w-100" src="img/carrusel2.jpg" alt="Imagen de un grupo de estudio en una mesa">
-		    </div>
-		    
-		    <div class="carousel-item">
-		      <img class="d-block w-100" src="img/carrusel3.jpg" alt="Imagen del Patio del Centro Educativo">
-		    </div>
-		    
-		  </div>
-		  <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
-		    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-		    <span class="sr-only">Anterior</span>
-		  </a>
-		  <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
-		    <span class="carousel-control-next-icon" aria-hidden="true"></span>
-		    <span class="sr-only">Siguiente</span>
-		  </a>
-		</div>
-		
-		<!– INTRO –>
-		
-		<section class="w-50 mx-auto text-center pt-3 pb-3" id="intro">
-			<h1 class="p-3 border-top border-3">Centro Docente</h1>
-			<p class="pb-3 border-bottom border-3">Formando alumnos <span class="text-primary">desde 1865</span>. Tu centro educativo de confianza.</p> 
-		</section>
-		
-		<!– NOTICIAS –>
-		
-		<section class="container-fluid d-flex justify-content-center">
-			<div class="row justify-content-center p-3" id="row-gris">
-				<div class="col-lg-auto col-md-auto col-sm-auto col-xs-auto">
-					<img class="tamaño-imagen" src="img/investigacion.png" alt="Noticia Pioneros en Investigación" width="500" height="480">
-				</div>
-				<div class="col-lg-3 col-md-6 col-sm-8 col-xs-auto pt-2">
-					<h2 class="titular-pequeño">Pioneros en investigación</h2>
-					<p class="texto-pequeño">Centro Docente es la institución educativa de España más avanzada en investigación, contando con numerosos premios que la respaldan.</p>
-					<a href="#">Seguir leyendo...</a>
-				</div>
-			</div>
-		</section>
-		
-		<!– PIE DE PÁGINA –>
-		<footer class="d-flex justify-content-center flex-wrap">
-			<div="row">
-				<p class="fs-5 px-3 pt-3">Conecta con nosotros en nuestras redes:</p>
-			</div>	
-			<div="row" class="d-flex justify-content-center">
-				<div id="iconos">
-				<a href="#"><i class="bi bi-instagram"></i></a>
-				<a href="#"><i class="bi bi-facebook"></i></a>
-				<a href="#"><i class="bi bi-twitter"></i></a>
-				<a href="#"><i class="bi bi-telegram"></i></a>
-			</div>
-			</div>
-		</footer>
-		
-</html>
+﻿@{
+    ViewBag.Title = "Home Page";
+}
+
+<div class="jumbotron">
+    <h1>.NET 💜 Azure</h1>
+    <p class="lead">Example App ECG</p>
+</div>
+
+<div class="row">
+    <div class="col-md-4">
+        <h2>Getting started</h2>
+        <p>
+            ASP.NET MVC gives you a powerful, patterns-based way to build dynamic websites that
+            enables a clean separation of concerns and gives you full control over markup
+            for enjoyable, agile development.
+        </p>
+        <p><a class="btn btn-default" href="https://go.microsoft.com/fwlink/?LinkId=301865">Learn more &raquo;</a></p>
+    </div>
+    <div class="col-md-4">
+        <h2>Get more libraries</h2>
+        <p>NuGet is a free Visual Studio extension that makes it easy to add, remove, and update libraries and tools in Visual Studio projects.</p>
+        <p><a class="btn btn-default" href="https://go.microsoft.com/fwlink/?LinkId=301866">Learn more &raquo;</a></p>
+    </div>
+    <div class="col-md-4">
+        <h2>Web Hosting</h2>
+        <p>You can easily find a web hosting company that offers the right mix of features and price for your applications.</p>
+        <p><a class="btn btn-default" href="https://go.microsoft.com/fwlink/?LinkId=301867">Learn more &raquo;</a></p>
+    </div>
+</div>
